added test case and code for updateing sell price